--- a/src/pages/Home/slider/index.css
+++ b/src/pages/Home/slider/index.css
@@ -1,3 +1,5 @@
+@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css');
+
 
 .homeSlider{padding: 30px 0px;}
 .home_slider_Main{border-radius: 25px; overflow:hidden; position: relative;}
